Added base classes and api spec
